docs: update README with Java 25 features, build information, and directory structure